@@ -1,0 +1,9 @@
+#Header files
+HEADERS += \
+ImportExport/IImportExport.h \
+ImportExport/ImportNMEA.h
+
+#Source files
+SOURCES += \
+ImportExport/IImportExport.cpp \
+ImportExport/ImportNMEA.cpp
