@@ -13,3 +13,5 @@ UI_DIR += ./GeneratedFiles
 #Include file(s)
 include(Merkaartor.pri)
 include(QMapControl.pri)
+include(ImportExport.pri)
+
